--- a/Forma for Test/FormForTest/FormForTest.csproj
+++ b/Forma for Test/FormForTest/FormForTest.csproj
@@ -8,10 +8,26 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\WebAPI\WebAPIModule\WebAPIModule.csproj" />
+    <Folder Include="Data\NeuronNetwork\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="SettingsResourse.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SettingsResourse.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="SettingsResourse.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>SettingsResourse.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
