Редакция уровней доступа к классам БД. Новые формы. Логика запуска приложения. Новый католог для изображений и нового изображения.

--- a/Forma for Test/FormForTest/FormForTest.csproj
+++ b/Forma for Test/FormForTest/FormForTest.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Start.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
   </ItemGroup>
