--- a/Forma for Test/FormForTest/FormForTest.csproj
+++ b/Forma for Test/FormForTest/FormForTest.csproj
@@ -20,7 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="SettingsResourse.Designer.cs">
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\SettingsResourse.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>SettingsResourse.resx</DependentUpon>
@@ -28,7 +33,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="SettingsResourse.resx">
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\SettingsResourse.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SettingsResourse.Designer.cs</LastGenOutput>
     </EmbeddedResource>
